--- a/assets/style/var.less
+++ b/assets/style/var.less
@@ -9,28 +9,30 @@ body {
   --pk-c-warning: #fc651f;
   --pk-c-secondary: #6c757d;
   --pk-c-yellow: #f5c800;
-  --pk-c-font: #343a40;
-  --pk-bg-body: #f3f5f7;
-  --pk-bg-card: #fff;
-  --pk-bg-box: #fff;
   --pk-c-dark:#343a40;
   --pk-c-light:#f8f9fa;
   --pk-bg-light:#fefcfc;
   --pk-bg-grey: #f8f8f9;
-  --pk-c-input-bg:#f8f8f9;
-  --pk-bg-box-content: #f8f8f9;
-  --pk-c-border: #f3f3f3;
   --pk-g-box-radius: 5px;
-  --pk-bg-header:rgb(255 255 255 / 15%);
+  --pk-bg-body: #f3f5f7;
+  --pk-c-font: #343a40;
+  --pk-bg-card: #fff;
+  --pk-bg-box: #fff;
+  --pk-bg-box-content: #f8f8f9;
+  --pk-c-input-bg:#f8f8f9;
+  --pk-c-border: #f3f3f3;
+  //--pk-bg-header:rgb(255 255 255 / 15%);
+}
 
-  &.puock-dark {
-    --pk-bg-body: #1e2a36;
-    --pk-c-font: #f8f9fa;
-    --pk-bg-card: #2f3940;
-    --pk-bg-box: #1a242f;
-    --pk-bg-box-content: #1e2a36;
-    --pk-c-input-bg:#1e2a36;
-    --pk-c-border: #2f373e;
-    --pk-bg-header:rgb(34 34 34 / 15%);
-  }
+
+
+.puock-dark {
+  --pk-bg-body: #1e2a36;
+  --pk-c-font: #f8f9fa;
+  --pk-bg-card: #2f3940;
+  --pk-bg-box: #1a242f;
+  --pk-bg-box-content: #1e2a36;
+  --pk-c-input-bg:#1e2a36;
+  --pk-c-border: #2f373e;
+  --pk-bg-header:#1e2a36;
 }
